[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["ayumu <ayumu4bus@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.0.239"
streamlit = "^1.25.0"
tiktoken = "^0.4.0"
openai = "^0.27.8"
jupyterlab = "^4.0.3"
colorama = "^0.4.6"
isort = "^5.12.0"
mypy = "^1.4.1"
flake8 = "^6.0.0"
pytest = "^7.4.0"
black = "^23.7.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
